# python-course

./: README.md  pyproject.toml
hw1/: __init__.py  __main__.py  ast_visitor.py  fib.py  main.py  pyproject.toml  requirements.txt
hw1/astconstructor/: __init__.py  fib.py
hw1/src/: __init__.py  ast_visitor.py
hw2/: Dockerfile  main.py
hw2/artifacts/: easy_task.tex  easy_task.txt  medium_task.tex
hw3/: main.py  pyproject.toml
hw3/artifacts/easy/: matrix+.txt  matrix@.txt  matrix_mul.txt
hw3/artifacts/hard/: A.txt  AB.txt  B.txt  C.txt  CD.txt  hash.txt
hw3/artifacts/medium/: matrix+.txt  matrix@.txt  matrix_mul.txt
hw3/hw3/: __init__.py  easy.py  hard.py  medium.py
hw3/matrix/: __init__.py  easy.py
hw4/: main.py  pyproject.toml
hw4/artifacts/: easy.txt  medium.txt
hw4/hw4/: __init__.py  easy.py  medium.py
hw5/: main.py  pyproject.toml
hw5/hw5/: __init__.py  easy.py
