[tool.poetry]
name = "python-course"
version = "0.1.0"
description = ""
authors = ["alexbuyan <sashabuyan@yandex.ru>"]
readme = "README.md"
packages = [{include = "python_course"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.0"
pygraphviz = "^1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
