[tool.poetry]
name = "AstConstructor"
version = "0.1.1"
description = ""
authors = ["alexbuyan <sashabuyan@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^3.0"
pygraphviz = "^1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
